fix scrollbars in error message

--- a/themes/base.css
+++ b/themes/base.css
@@ -1841,6 +1841,6 @@ BODY.minimal3 {
 #thruk_message {
   @apply card shadow-float absolute p-1 z-[100] min-w-full lg:min-w-[600px] max-w-[80vw] top-14 left-1/2 transform -translate-x-1/2;
   >DIV {
-    @apply flexrow flex-nowrap gap-2 justify-center max-w-full overflow-scroll;
+    @apply flexrow flex-nowrap gap-2 justify-center max-w-full overflow-auto;
   }
 }
